# Hub-Soberano-AI-Knowledge-Base

./: .dockerignore  .gitignore  ANTIGRAVITY_MASTER_SPEC.md  App.tsx  BITACORA_CAMPO.md  Dockerfile  KNOWLEDGE_BASE.md  LEEME.TXT  MAPA_SISTEMA.md  README.md  antigravity_run.bat  app.json  buscar_remedio.py  cargar_desde_csv.py  cargar_stock.py  config.yaml  config_sector.json  logs_consola_hoy.txt  main.py  nticx_pro_notion.md  package-lock.json  package.json  reporte_martir_real.md  requirements.txt  run_scraper.bat  run_test.js  setup_notion.md  start.ps1  stock_farmacia.csv  team_manager.py  temp_sim_result.json  test_vademecum.ts
.antigravity/: seed_agro.py
.expo/: settings.json
antigravity-core/: ANTIGRAVITY_MASTER_SPEC.md  Dockerfile  auth.py  config.yaml  database.py  docker-compose.yml  ingestor.py  inventory_auditor.py  main.py  math_engine.py  notifier.py  pyproject.toml  report_generator.py  stress_test.py  test_api.py
antigravity-core/testsprite_tests/tmp/: config.json
archive/: pharmacy_data.json  raw_data_demo-saas.json  scrape_20260208_192317.json
config/: scheduler.json
dashboard/: package-lock.json  package.json
data/: antigravity.db  fashion_data.json  history.json  pharmacy_data.json  raw_data.json  raw_data_real_estate_demo-saas.json  raw_data_real_estate_test-orchestrator.json
directivas/: D001_Indexador.md  D002_Logger.md  D003_Cerebro.md  D004_Scraper.md  D005_Reporter.md  D006_Orquestador.md  D007_Comunicador.md  D008_Automatizacion.md  D009_Notificaciones.md  D010_Mantenimiento.md  D011_MultiTenancy.md  D012_Monetizacion.md
(+189 files in other folders)
